frame/support/test/tests/pallet_ui/event_002.stderr
error: expected `Event`
  --> $DIR/event_002.rs:19:11
   |
19 |     pub enum Foo {}
   |              ^^^
